--- a/Crypto_prediction/templates/visualization/coin-info.html
+++ b/Crypto_prediction/templates/visualization/coin-info.html
@@ -1,93 +1,376 @@
 {% extends 'index_base.html' %} {% block title %} Coin Info {% endblock title %}
 
 <!-- Specific CSS goes HERE -->
-{% block content %}
-<!-- <div class="col-xl-10">
+{% load static %}{% block content %}
+<div class="col-xl-15">
   <div class="card">
-    <div class="card-header">
-      <h5>Line [ Smooth ] Chart</h5>
-    </div>
-    <div class="card-block">
-      <div
-        id="morris-line-smooth-chart"
-        class="ChartShadow"
-        style="height: 300px"
-      ></div>
-    </div>
+    <!-- <a href="{% url 'real_time_test' %}">Load data</a> -->
+    <canvas id="myChart"></canvas>
   </div>
-</div> -->
+</div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
-<!-- your chart will be generated here! -->
-<canvas id="myChart" width="400" height="400"></canvas>
-  </head>
-  <body>
-    <h1>Global Average Temperatures 1880-2018</h1>
-    <canvas id="myChart" width="400" height="200"></canvas>
+<!-- <canvas id="myChart" width="400" height="400"></canvas> -->
+<script>
+  const ctx1 = document.getElementById("myChart").getContext("2d");
+  // labels = [];
+  // datas = [];
+  // labels = days.days;
+  // datas = result.result;
 
-    <script>
-      // Data from: https://data.giss.nasa.gov/gistemp/
-      // Mean from: https://earthobservatory.nasa.gov/world-of-change/DecadalTemp
+  const myChart = new Chart(ctx1, {
+    type: "line",
+    data: {
+      labels: [
+        "2021-04-28",
+        "2021-04-29",
+        "2021-04-30",
+        "2021-05-01",
+        "2021-05-02",
+        "2021-05-03",
+        "2021-05-04",
+        "2021-05-05",
+        "2021-05-06",
+        "2021-05-07",
+        "2021-05-08",
+        "2021-05-09",
+        "2021-05-10",
+        "2021-05-11",
+        "2021-05-12",
+        "2021-05-13",
+        "2021-05-14",
+        "2021-05-15",
+        "2021-05-16",
+        "2021-05-17",
+        "2021-05-18",
+        "2021-05-19",
+        "2021-05-20",
+        "2021-05-21",
+        "2021-05-22",
+        "2021-05-23",
+        "2021-05-24",
+        "2021-05-25",
+        "2021-05-26",
+        "2021-05-27",
+        "2021-05-28",
+        "2021-05-29",
+        "2021-05-30",
+        "2021-05-31",
+        "2021-06-01",
+        "2021-06-02",
+        "2021-06-03",
+        "2021-06-04",
+        "2021-06-05",
+        "2021-06-06",
+        "2021-06-07",
+        "2021-06-08",
+        "2021-06-09",
+        "2021-06-10",
+        "2021-06-11",
+        "2021-06-12",
+        "2021-06-13",
+        "2021-06-14",
+        "2021-06-15",
+        "2021-06-16",
+        "2021-06-17",
+        "2021-06-18",
+        "2021-06-19",
+        "2021-06-20",
+        "2021-06-21",
+        "2021-06-22",
+        "2021-06-23",
+        "2021-06-24",
+        "2021-06-25",
+        "2021-06-26",
+        "2021-06-27",
+        "2021-06-28",
+        "2021-06-29",
+        "2021-06-30",
+        "2021-07-01",
+        "2021-07-02",
+        "2021-07-03",
+        "2021-07-04",
+        "2021-07-05",
+        "2021-07-06",
+        "2021-07-07",
+        "2021-07-08",
+        "2021-07-09",
+        "2021-07-10",
+        "2021-07-11",
+        "2021-07-12",
+        "2021-07-13",
+        "2021-07-14",
+        "2021-07-15",
+        "2021-07-16",
+        "2021-07-17",
+        "2021-07-18",
+        "2021-07-19",
+        "2021-07-20",
+        "2021-07-21",
+        "2021-07-22",
+        "2021-07-23",
+        "2021-07-24",
+        "2021-07-25",
+        "2021-07-26",
+        "2021-07-27",
+        "2021-07-28",
+        "2021-07-29",
+        "2021-07-30",
+        "2021-07-31",
+        "2021-08-01",
+        "2021-08-02",
+        "2021-08-03",
+        "2021-08-04",
+        "2021-08-05",
+        "2021-08-06",
+        "2021-08-07",
+        "2021-08-08",
+        "2021-08-09",
+        "2021-08-10",
+        "2021-08-11",
+        "2021-08-12",
+        "2021-08-13",
+        "2021-08-14",
+        "2021-08-15",
+        "2021-08-16",
+        "2021-08-17",
+        "2021-08-18",
+        "2021-08-19",
+        "2021-08-20",
+        "2021-08-21",
+        "2021-08-22",
+        "2021-08-23",
+        "2021-08-24",
+        "2021-08-25",
+        "2021-08-26",
+        "2021-08-27",
+        "2021-08-28",
+        "2021-08-29",
+        "2021-08-30",
+        "2021-08-31",
+        "2021-09-01",
+        "2021-09-02",
+        "2021-09-03",
+        "2021-09-04",
+        "2021-09-05",
+        "2021-09-06",
+        "2021-09-07",
+        "2021-09-08",
+        "2021-09-09",
+        "2021-09-10",
+        "2021-09-11",
+        "2021-09-12",
+        "2021-09-13",
+        "2021-09-14",
+        "2021-09-15",
+        "2021-09-16",
+        "2021-09-17",
+        "2021-09-18",
+        "2021-09-19",
+        "2021-09-20",
+        "2021-09-21",
+        "2021-09-22",
+        "2021-09-23",
+        "2021-09-24",
+        "2021-09-25",
+        "2021-09-26",
+        "2021-09-27",
+        "2021-09-28",
+        "2021-09-29",
+        "2021-09-30",
+        "2021-10-01",
+        "2021-10-02",
+        "2021-10-03",
+        "2021-10-04",
+        "2021-10-05",
+        "2021-10-06",
+        "2021-10-07",
+        "2021-10-08",
+        "2021-10-09",
+        "2021-10-10",
+        "2021-10-11",
+        "2021-10-12",
+        "2021-10-13",
+        "2021-10-14",
+        "2021-10-15",
+        "2021-10-16",
+        "2021-10-17",
+        "2021-10-18",
+        "2021-10-19",
+        "2021-10-20",
+        "2021-10-21",
+        "2021-10-22",
+        "2021-10-23",
+        "2021-10-24",
+        "2021-10-25",
+      ],
+      datasets: [
+        {
+          label: "Closing price",
+          data: [
+            53420.40856825, 53406.08393111, 53420.40856825, 53420.40856825,
+            53420.40856825, 53406.08393111, 53406.08393111, 51030.59094366,
+            53420.40856825, 53420.40856825, 53420.40856825, 55099.03706967,
+            53510.43196872, 53500.66552078, 53501.98303664, 53420.40856825,
+            53420.40856825, 53406.08393111, 53406.08393111, 52905.99365751,
+            52481.71395266, 51435.56725879, 52408.73862417, 50948.84215242,
+            53406.08393111, 53420.40856825, 53406.08393111, 51435.56725879,
+            51426.53909234, 52481.71395266, 53420.40856825, 53420.40856825,
+            53420.40856825, 53511.74948458, 53501.98303664, 53501.98303664,
+            53510.43196872, 59865.6405796, 60074.22261929, 60260.80292493,
+            60265.13561724, 60265.13561724, 60260.80292493, 60265.13561724,
+            60265.13561724, 60265.13561724, 60265.82668704, 60260.80292493,
+            60265.13561724, 60265.13561724, 60265.82668704, 60274.4491264,
+            60265.13561724, 60265.13561724, 60260.80292493, 60260.80292493,
+            60260.80292493, 60274.05894336, 60278.00787012, 60283.99568438,
+            60282.01959817, 60289.1877953, 60289.5998971, 60289.1877953,
+            60481.85887274, 60442.72841631, 60442.72841631, 60319.32101612,
+            60646.28403159, 60852.66041143, 60852.66041143, 60852.66041143,
+            60852.66041143, 60852.79561957, 60852.79561957, 60829.19702756,
+            60829.19702756, 60829.19702756, 60829.19702756, 60852.66041143,
+            60852.66041143, 60852.66041143, 60852.79561957, 60814.41373545,
+            60852.66041143, 60852.66041143, 60852.66041143, 60852.66041143,
+            60852.66041143, 60852.66041143, 60884.41818194, 60852.66041143,
+            60852.66041143, 60852.66041143, 60852.66041143, 60884.41818194,
+            60899.50626658, 60899.50626658, 60899.04318502, 60898.89609706,
+            60898.89609706, 60894.74863145, 60894.74863145, 60896.24694146,
+            60899.04318502, 60896.23994888, 60884.41818194, 60897.03599597,
+            60884.41818194, 60852.66041143, 60884.41818194, 60896.57291441,
+            60895.84170269, 60925.14610739, 60926.03614356, 60911.08525609,
+            60902.00823268, 60922.03397177, 60911.08525609, 60925.96740984,
+            61225.27828713, 61093.54236897, 61147.1478476, 61970.63173666,
+            62431.48705389, 62062.73464471, 62100.94870111, 62062.73464471,
+            61976.8952437, 61601.48649177, 61615.98828795, 61634.2333158,
+            61647.49461176, 61703.05182274, 61634.2333158, 61546.80844278,
+            61331.90792688, 62178.72550133, 62604.62196867, 61998.81177971,
+            61990.90696957, 62088.13362322, 62070.97293386, 62070.97293386,
+            62604.62196867, 62100.94870111, 62604.62196867, 62604.62196867,
+            63004.41746138, 63004.41746138, 63004.41746138, 63004.41746138,
+            63004.41746138, 63004.41746138, 63004.41746138, 63004.41746138,
+            63004.41746138, 63004.41746138, 63004.41746138, 62604.62196867,
+            62604.62196867, 62604.62196867, 62604.62196867, 63004.41746138,
+            63004.41746138, 61621.86203745, 61548.29816235, 61647.49461176,
+            61697.98856579, 61609.72478091, 62062.73464471, 62062.73464471,
+            61746.36067698, 61732.34159268, 61732.34159268, 61554.48229304,
+            61502.98427826, 61436.41015609, 61601.48649177, 62024.52036051,
+            62094.73060925,
+          ],
+          fill: true,
+          backgroundColor: [
+            "rgba(255, 99, 132, 0.2)",
+            "rgba(54, 162, 235, 0.2)",
+          ],
+          borderColor: ["rgba(255, 99, 132, 1)"],
+          borderWidth: 1,
+        },
+      ],
+    },
+    options: {
+      scales: {
+        y: {
+          beginAtZero: false,
+        },
+      },
+    },
+  });
+</script>
 
-      window.addEventListener('load', setup);
-
-      async function setup() {
-        const ctx = document.getElementById('myChart').getContext('2d');
-        const globalTemps = await getData();
-        const myChart = new Chart(ctx, {
-          type: 'line',
-          data: {
-            labels: globalTemps.sr,
-            datasets: [
-              {
-                label: 'Prices',
-                data: globalTemps.prices,
-                fill: false,
-                borderColor: 'rgba(255, 99, 132, 1)',
-                backgroundColor: 'rgba(255, 99, 132, 0.5)',
-                borderWidth: 1
-              },
-              {
-                label: 'Dates',
-                data: globalTemps.dates,
-                fill: false,
-                borderColor: 'rgba(255, 99, 132, 1)',
-                backgroundColor: 'rgba(255, 99, 132, 0.5)',
-                borderWidth: 1
-              }
-            ]
-          },
-          options: {
-        scales: {
-            y: {
-                ticks: {
-                    // Include a dollar sign in the ticks
-                    callback: function(value, index, values) {
-                        return '$' + value;
-                    }
-                }
-            }
-        }
-    }
-        });
-      }
-
-      async function getData() {
-        // const response = await fetch('testdata.csv');
-        const response = await fetch('predicted.csv');
-        const data = await response.text();
-        const dates = [];
-        const prices = [];
-        const sr = [];
-        const rows = data.split('\n').slice(1);
-        rows.forEach(row => {
-          const cols = row.split(',');
-          dates.push(cols[0]);
-          prices.push(14 + parseFloat(cols[1]));
-          sr.push(14 + parseFloat(cols[2]));
-        });
-        return { dates, prices, sr };
-      }
-    </script>
+<script>
+  const ctx2 = document.getElementById("Chart").getContext("2d");
+  const Chart = new myChart(ctx2, {
+    type: "line",
+    data: {
+      labels: [
+        "2021-09-01",
+        "2021-09-02",
+        "2021-09-03",
+        "2021-09-04",
+        "2021-09-05",
+        "2021-09-06",
+        "2021-09-07",
+        "2021-09-08",
+        "2021-09-09",
+        "2021-09-10",
+        "2021-09-11",
+        "2021-09-12",
+        "2021-09-13",
+        "2021-09-14",
+        "2021-09-15",
+        "2021-09-16",
+        "2021-09-17",
+        "2021-09-18",
+        "2021-09-19",
+        "2021-09-20",
+        "2021-09-21",
+        "2021-09-22",
+        "2021-09-23",
+        "2021-09-24",
+        "2021-09-25",
+        "2021-09-26",
+        "2021-09-27",
+        "2021-09-28",
+        "2021-09-29",
+        "2021-09-30",
+        "2021-10-01",
+        "2021-10-02",
+        "2021-10-03",
+        "2021-10-04",
+        "2021-10-05",
+        "2021-10-06",
+        "2021-10-07",
+        "2021-10-08",
+        "2021-10-09",
+        "2021-10-10",
+        "2021-10-11",
+        "2021-10-12",
+        "2021-10-13",
+        "2021-10-14",
+        "2021-10-15",
+        "2021-10-16",
+        "2021-10-17",
+        "2021-10-18",
+        "2021-10-19",
+        "2021-10-20",
+        "2021-10-21",
+        "2021-10-22",
+        "2021-10-23",
+        "2021-10-24",
+        "2021-10-25",
+      ],
+      datasets: [
+        {
+          label: "Market Cap",
+          data: [
+            62062.73464471, 61976.8952437, 61601.48649177, 61615.98828795,
+            61634.2333158, 61647.49461176, 61703.05182274, 61634.2333158,
+            61546.80844278, 61331.90792688, 62178.72550133, 62604.62196867,
+            61998.81177971, 61990.90696957, 62088.13362322, 62070.97293386,
+            62070.97293386, 62604.62196867, 62100.94870111, 62604.62196867,
+            62604.62196867, 63004.41746138, 63004.41746138, 63004.41746138,
+            63004.41746138, 63004.41746138, 63004.41746138, 63004.41746138,
+            63004.41746138, 63004.41746138, 63004.41746138, 63004.41746138,
+            62604.62196867, 62604.62196867, 62604.62196867, 62604.62196867,
+            63004.41746138, 63004.41746138, 61621.86203745, 61548.29816235,
+            61647.49461176, 61697.98856579, 61609.72478091, 62062.73464471,
+            62062.73464471, 61746.36067698, 61732.34159268, 61732.34159268,
+            61554.48229304, 61502.98427826, 61436.41015609, 61601.48649177,
+            62024.52036051, 62094.73060925,
+          ],
+          fill: true,
+          backgroundColor: ["rgba(255, 159, 64, 0.2)"],
+          borderColor: ["rgba(255, 159, 64, 1)"],
+          borderWidth: 1,
+        },
+      ],
+    },
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true,
+        },
+      },
+    },
+  });
+</script>
 {% endblock content %}
 
 <!-- Specific JS goes HERE -->
