--- a/Crypto_prediction/templates/visualization/detailed-prediction.html
+++ b/Crypto_prediction/templates/visualization/detailed-prediction.html
@@ -2,42 +2,48 @@
 
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}{% endblock stylesheets %} {% block content %}
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <div class="col-xl-14 col-md-12 m-b-30">
   <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item">
       <a
         class="nav-link"
-        id="home-tab"
+        id="load_data"
         data-toggle="tab"
         href="#home"
         role="tab"
         aria-controls="home"
         aria-selected="false"
+        name="load_data"
+        class="btn btn-info"
         >Today</a
       >
     </li>
     <li class="nav-item">
       <a
         class="nav-link active show"
-        id="profile-tab"
+        id="load_data"
         data-toggle="tab"
         href="#profile"
         role="tab"
         aria-controls="profile"
         aria-selected="true"
+        name="load_data"
+        class="btn btn-info"
         >This Week</a
       >
     </li>
     <li class="nav-item">
       <a
         class="nav-link"
-        id="contact-tab"
+        id="load_data"
         data-toggle="tab"
         href="#contact"
         role="tab"
         aria-controls="contact"
         aria-selected="false"
+        name="load_data"
+        class="btn btn-info"
         >All</a
       >
     </li>
@@ -50,115 +56,7 @@
       aria-labelledby="home-tab"
     >
       <table class="table table-hover">
-        <thead>
-          <tr>
-            <th>User</th>
-            <th>Activity</th>
-            <th>Time</th>
-            <th>Status</th>
-            <th class="text-right"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-              <h6 class="m-0">
-                <img
-                  class="rounded-circle m-r-10"
-                  style="width: 40px"
-                  src="images/user/avatar-1.jpg"
-                  alt="activity-user"
-                />Ida Jorgensen
-              </h6>
-            </td>
-            <td>
-              <h6 class="m-0">The quick brown fox</h6>
-            </td>
-            <td>
-              <h6 class="m-0">3:28 PM</h6>
-            </td>
-            <td>
-              <h6 class="m-0 text-c-green">Done</h6>
-            </td>
-            <td class="text-right">
-              <i class="fas fa-circle text-c-green f-10"></i>
-            </td>
-          </tr>
-
-          <tr>
-            <td>
-              <h6 class="m-0">
-                <img
-                  class="rounded-circle m-r-10"
-                  style="width: 40px"
-                  src="images/user/avatar-2.jpg"
-                  alt="activity-user"
-                />Albert Andersen
-              </h6>
-            </td>
-            <td>
-              <h6 class="m-0">Jumps over the lazy</h6>
-            </td>
-            <td>
-              <h6 class="m-0">2:37 PM</h6>
-            </td>
-            <td>
-              <h6 class="m-0 text-c-red">Missed</h6>
-            </td>
-            <td class="text-right">
-              <i class="fas fa-circle text-c-red f-10"></i>
-            </td>
-          </tr>
-
-          <tr>
-            <td>
-              <h6 class="m-0">
-                <img
-                  class="rounded-circle m-r-10"
-                  style="width: 40px"
-                  src="images/user/avatar-3.jpg"
-                  alt="activity-user"
-                />Silje Larsen
-              </h6>
-            </td>
-            <td>
-              <h6 class="m-0">Dog the quick brown</h6>
-            </td>
-            <td>
-              <h6 class="m-0">10:23 AM</h6>
-            </td>
-            <td>
-              <h6 class="m-0 text-c-purple">Delayed</h6>
-            </td>
-            <td class="text-right">
-              <i class="fas fa-circle text-c-purple f-10"></i>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h6 class="m-0">
-                <img
-                  class="rounded-circle m-r-10"
-                  style="width: 40px"
-                  src="images/user/avatar-1.jpg"
-                  alt="activity-user"
-                />Ida Jorgensen
-              </h6>
-            </td>
-            <td>
-              <h6 class="m-0">The quick brown fox</h6>
-            </td>
-            <td>
-              <h6 class="m-0">4:28 PM</h6>
-            </td>
-            <td>
-              <h6 class="m-0 text-c-green">Done</h6>
-            </td>
-            <td class="text-right">
-              <i class="fas fa-circle text-c-green f-10"></i>
-            </td>
-          </tr>
-        </tbody>
+        <div id="today_table"></div>
       </table>
     </div>
     <div
@@ -168,113 +66,7 @@
       aria-labelledby="profile-tab"
     >
       <table class="table table-hover">
-        <thead>
-          <tr>
-            <th>User</th>
-            <th>Activity</th>
-            <th>Time</th>
-            <th>Status</th>
-            <th class="text-right"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-              <h6 class="m-0">
-                <img
-                  class="rounded-circle m-r-10"
-                  style="width: 40px"
-                  src="images/user/avatar-2.jpg"
-                  alt="activity-user"
-                />Albert Andersen
-              </h6>
-            </td>
-            <td>
-              <h6 class="m-0">Jumps over the lazy</h6>
-            </td>
-            <td>
-              <h6 class="m-0">2:37 PM</h6>
-            </td>
-            <td>
-              <h6 class="m-0 text-c-red">Missed</h6>
-            </td>
-            <td class="text-right">
-              <i class="fas fa-circle text-c-red f-10"></i>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h6 class="m-0">
-                <img
-                  class="rounded-circle m-r-10"
-                  style="width: 40px"
-                  src="images/user/avatar-1.jpg"
-                  alt="activity-user"
-                />Ida Jorgensen
-              </h6>
-            </td>
-            <td>
-              <h6 class="m-0">The quick brown fox</h6>
-            </td>
-            <td>
-              <h6 class="m-0">3:28 PM</h6>
-            </td>
-            <td>
-              <h6 class="m-0 text-c-green">Done</h6>
-            </td>
-            <td class="text-right">
-              <i class="fas fa-circle text-c-green f-10"></i>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h6 class="m-0">
-                <img
-                  class="rounded-circle m-r-10"
-                  style="width: 40px"
-                  src="images/user/avatar-1.jpg' %}"
-                  alt="activity-user"
-                />Ida Jorgensen
-              </h6>
-            </td>
-            <td>
-              <h6 class="m-0">The quick brown fox</h6>
-            </td>
-            <td>
-              <h6 class="m-0">4:28 PM</h6>
-            </td>
-            <td>
-              <h6 class="m-0 text-c-green">Done</h6>
-            </td>
-            <td class="text-right">
-              <i class="fas fa-circle text-c-green f-10"></i>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h6 class="m-0">
-                <img
-                  class="rounded-circle m-r-10"
-                  style="width: 40px"
-                  src="images/user/avatar-3.jpg"
-                  alt="activity-user"
-                />Silje Larsen
-              </h6>
-            </td>
-            <td>
-              <h6 class="m-0">Dog the quick brown</h6>
-            </td>
-            <td>
-              <h6 class="m-0">10:23 AM</h6>
-            </td>
-            <td>
-              <h6 class="m-0 text-c-purple">Delayed</h6>
-            </td>
-            <td class="text-right">
-              <i class="fas fa-circle text-c-purple f-10"></i>
-            </td>
-          </tr>
-        </tbody>
+        <div id="week_table"></div>
       </table>
     </div>
     <div
@@ -284,118 +76,46 @@
       aria-labelledby="contact-tab"
     >
       <table class="table table-hover">
-        <thead>
-          <tr>
-            <th>User</th>
-            <th>Activity</th>
-            <th>Time</th>
-            <th>Status</th>
-            <th class="text-right"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-              <h6 class="m-0">
-                <img
-                  class="rounded-circle m-r-10"
-                  style="width: 40px"
-                  src="images/user/avatar-3.jpg"
-                  alt="activity-user"
-                />Silje Larsen
-              </h6>
-            </td>
-            <td>
-              <h6 class="m-0">Dog the quick brown</h6>
-            </td>
-            <td>
-              <h6 class="m-0">10:23 AM</h6>
-            </td>
-            <td>
-              <h6 class="m-0 text-c-purple">Delayed</h6>
-            </td>
-            <td class="text-right">
-              <i class="fas fa-circle text-c-purple f-10"></i>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h6 class="m-0">
-                <img
-                  class="rounded-circle m-r-10"
-                  style="width: 40px"
-                  src="images/user/avatar-1.jpg"
-                  alt="activity-user"
-                />Ida Jorgensen
-              </h6>
-            </td>
-            <td>
-              <h6 class="m-0">The quick brown fox</h6>
-            </td>
-            <td>
-              <h6 class="m-0">3:28 PM</h6>
-            </td>
-            <td>
-              <h6 class="m-0 text-c-green">Done</h6>
-            </td>
-            <td class="text-right">
-              <i class="fas fa-circle text-c-green f-10"></i>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h6 class="m-0">
-                <img
-                  class="rounded-circle m-r-10"
-                  style="width: 40px"
-                  src="images/user/avatar-2.jpg' %}"
-                  alt="activity-user"
-                />Albert Andersen
-              </h6>
-            </td>
-            <td>
-              <h6 class="m-0">Jumps over the lazy</h6>
-            </td>
-            <td>
-              <h6 class="m-0">2:37 PM</h6>
-            </td>
-            <td>
-              <h6 class="m-0 text-c-red">Missed</h6>
-            </td>
-            <td class="text-right">
-              <i class="fas fa-circle text-c-red f-10"></i>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h6 class="m-0">
-                <img
-                  class="rounded-circle m-r-10"
-                  style="width: 40px"
-                  src="{ % static 'images/user/avatar-1.jpg' %}"
-                  alt="activity-user"
-                />Ida Jorgensen
-              </h6>
-            </td>
-            <td>
-              <h6 class="m-0">The quick brown fox</h6>
-            </td>
-            <td>
-              <h6 class="m-0">4:28 PM</h6>
-            </td>
-            <td>
-              <h6 class="m-0 text-c-green">Done</h6>
-            </td>
-            <td class="text-right">
-              <i class="fas fa-circle text-c-green f-10"></i>
-            </td>
-          </tr>
-        </tbody>
+        <div id="all_table"></div>
       </table>
     </div>
   </div>
 </div>
 
+<script>
+  $(document).ready(function () {
+    $("#load_data").click(function () {
+      $.ajax({
+        url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vTs2vlLw8bXXhqmODkgffmqHPrHMB5tyHE0EPziBg1sFkXXtCZrY2dru1HVRyWnIcEhH6jvBqrtsL6d/pub?gid=145772431&single=true&output=csv",
+        dataType: "text",
+        success: function (data) {
+          var employee_data = data.split(/\r?\n|\r/);
+          var table_data = '<table class="table table-hover">';
+          for (var count = 0; count < 50; count++) {
+            var cell_data = employee_data[count].split(",");
+            table_data += "<tr>";
+            for (
+              var cell_count = 0;
+              cell_count < cell_data.length;
+              cell_count++
+            ) {
+              if (count === 0) {
+                table_data += "<th>" + cell_data[cell_count] + "</th>";
+              } else {
+                table_data += "<td>" + cell_data[cell_count] + "</td>";
+              }
+            }
+            table_data += "</tr>";
+          }
+          table_data += "</table>";
+          $("#today_table").html(table_data);
+          $("#week_table").html(table_data);
+          $("#all_table").html(table_data);
+        },
+      });
+    });
+  });
+</script>
 {% endblock content %}
 
 <!-- Specific JS goes HERE -->
