--- a/Crypto_prediction/templates/index_base.html
+++ b/Crypto_prediction/templates/index_base.html
@@ -126,6 +126,13 @@
                 ><span class="pcoded-mtext">Payment</span></a
               >
             </li>
+            <li data-username="Sample Page" class="nav-item">
+              <a href="{% url 'consultant' %}" class="nav-link"
+                ><span class="pcoded-micon"
+                  ><i class="feather icon-user-plus"></i></span
+                ><span class="pcoded-mtext">Consultant Details</span></a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -223,33 +230,11 @@
                     alt="User-Profile-Image"
                   />
                   <span> {{user.username}}</span>
-                  <a
-                    href="{% url 'logout' %}"
-                    class="dud-logout"
-                    title="Logout"
-                  >
-                    <i class="feather icon-log-out"></i>
-                  </a>
                 </div>
                 <ul class="pro-body">
                   <li>
-                    <a href="javascript:" class="dropdown-item"
-                      ><i class="feather icon-settings"></i> Settings</a
-                    >
-                  </li>
-                  <li>
-                    <a href="javascript:" class="dropdown-item"
-                      ><i class="feather icon-user"></i> Profile</a
-                    >
-                  </li>
-                  <li>
-                    <a href="message.html" class="dropdown-item"
-                      ><i class="feather icon-mail"></i> My Messages</a
-                    >
-                  </li>
-                  <li>
-                    <a href="auth-signin.html" class="dropdown-item"
-                      ><i class="feather icon-lock"></i> Lock Screen</a
+                    <a href="{% url 'logout' %}" class="dropdown-item"
+                      ><i class="feather icon-log-out"></i>Logout</a
                     >
                   </li>
                 </ul>
@@ -278,56 +263,6 @@
       </div>
     </div>
     <!-- [ Main Content ] end -->
-
-    <!-- Warning Section Starts -->
-    <!-- Older IE warning message -->
-    <!--[if lt IE 11]>
-      <div class="ie-warning">
-        <h1>Warning!!</h1>
-        <p>
-          You are using an outdated version of Internet Explorer, please upgrade
-          <br />to any of the following web browsers to access this website.
-        </p>
-        <div class="iew-container">
-          <ul class="iew-download">
-            <li>
-              <a href="http://www.google.com/chrome/">
-                <img src="images/browser/chrome.png" alt="Chrome" />
-                <div>Chrome</div>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.mozilla.org/en-US/firefox/new/">
-                <img src="images/browser/firefox.png" alt="Firefox" />
-                <div>Firefox</div>
-              </a>
-            </li>
-            <li>
-              <a href="http://www.opera.com">
-                <img src="images/browser/opera.png" alt="Opera" />
-                <div>Opera</div>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.apple.com/safari/">
-                <img src="images/browser/safari.png" alt="Safari" />
-                <div>Safari</div>
-              </a>
-            </li>
-            <li>
-              <a
-                href="http://windows.microsoft.com/en-us/internet-explorer/download-ie"
-              >
-                <img src="images/browser/ie.png" alt="" />
-                <div>IE (11 & above)</div>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <p>Sorry for the inconvenience!</p>
-      </div>
-    <![endif]-->
-    <!-- Warning Section Ends -->
 
     <!-- Required Js -->
     <script src="{% static 'js/vendor-all.min.js'%}"></script>
